--- a/src/main/resources/public/src/scss/form/form.scss
+++ b/src/main/resources/public/src/scss/form/form.scss
@@ -6,11 +6,14 @@
  */
 @charset 'utf-8';
 
-@import '../template/_reset.scss';
+@import '../template/_reset.scss'; // 상속 불가
+@import '../template/_functions.scss'; // 상속 불가
+@import '../template/_mixins.scss'; // 상속 불가
 @import '_variables.scss';
-@import '_fonts.scss';
 @import '_mixins.scss';
+@import '_fonts.scss';
 @import '_elements.scss';
+// TODO 아래 순서 정리
 @import '_layout.scss';
 @import '_buttons.scss';
 @import '_components.scss';
