--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -5,35 +5,184 @@
  * @author wdj
  * @vertionn 1.0
  */
- 
- input, button, select, optgroup, textarea {
+
+// 기본 글꼴 설정.
+// 모바일 기기 회전시에 사용자가 확대하지 않아도 글씨 크기가 재조정되는 것을 예방.
+body {
+  font-family: $font-family;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+// heading 
+h1, h2, h3, h4, h5, h6 {
   font-family: inherit;
-  font-size: 100%;
-  line-height: 1;
-  margin: 0;
+  font-weight: 500; // medium
+  line-height: 1.2; // normal
+  color: $light-black;
+
+  @each $theme, $color in $headings-theme {
+    .#{$theme} {
+      color: $color;
+    }
+  }
 }
 
-a:link{text-decoration: none; color: inherit;}
-a:visited{text-decoration: none; color: inherit;}
-a:hover{text-decoration: none;}
-a:active{text-decoration: none;}
-
-button{
-  background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; overflow:visible; cursor:pointer
+h1 { 
+  font-size: $font-size-base * 2.25; // 36px
 }
-
-input, button, select, optgroup, textarea {
+h2 { 
+  font-size: $font-size-base * 1.75; // 28px
+}
+h3 { 
+  font-size: $font-size-base * 1.5;  // 24px
+}
+h4 { 
+  font-size: $font-size-base * 1.25; // 20px
+}
+h5 { 
+  font-size: $font-size-base;
+}
+h6 { 
+  font-family: 'Malgun Gothic'; // h6 만 기본 값이 맑은 고딕.
+  font-size: $font-size-base * 0.875; // 14px
+}
+// a
+a:link,
+a:visited { 
+  text-decoration: none;
+  color: inherit;
+}
+a:hover,
+a:active { 
+  text-decoration: none;
+}
+// input
+input {
+  height: 2.5rem; // 40px
   font-family: inherit;
-  font-size: 100%;
-  line-height: 1;
-  margin: 0;
+  font-size: $font-size-base;
+  font-weight: 400; // regular
+  line-height: 1.2; // normal
+  color: $dark-gray;
+  background-color: $white;
+  border: 0.0625rem solid $line-gray; // 1px
+  border-radius: 0.0625rem; // 1px
+  padding: 0 0.625rem 0 0.625rem; // 들여쓰기 0 10px 0 10px
+
+  &::placeholder {
+    color: $gray;
+  }
+
+  &:focus {
+    outline: 0;
+    border: 0.0625rem solid $point-blue; // 1px
+  }
+
+  &:hover {
+    outline: 0;
+    border: 0.0625rem solid $point-blue; // 1px
+    box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2); // 흐림 5px
+  }
+
+  &:disabled,
+  &:read-only {
+    color: $gray;
+    background-color: $light-gray;
+    pointer-events: none;
+    cursor: default;
+  }
 }
+// textarea
+textarea {
+  font-family: inherit;
+  font-size: $font-size-base;
+  font-weight: 400; // regular
+  line-height: 1.2; // normal
+  color: $dark-gray;
+  background-color: $white;
+  border: 0.0625rem solid $line-gray; // 1px
+  border-radius: 0.0625rem; // 1px
+  padding: 0.5rem 0.625rem 0.5rem 0.625rem; // 들여쓰기 8px 10px 8px 10px
+  resize: vertical;
 
-a:link{text-decoration: none; color: inherit;}
-a:visited{text-decoration: none; color: inherit;}
-a:hover{text-decoration: none;}
-a:active{text-decoration: none;}
+  &::placeholder {
+    color: $gray;
+  }
 
-button{
-  background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; overflow:visible; cursor:pointer
+  &:focus {
+    outline: 0;
+    border: 0.0625rem solid $point-blue; // 1px
+  }
+
+  &:hover {
+    outline: 0;
+    border: 0.0625rem solid $point-blue; // 1px
+    box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2); // 흐림 5px
+  }
+
+  &:disabled,
+  &:read-only {
+    color: $gray;
+    background-color: $light-gray;
+    pointer-events: none;
+    cursor: default;
+  }
+}
+// 테이블 요소 사이의 간격을 제거
+table { 
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+// select
+// TODO select design
+// span
+span {
+  margin: auto 0;
+}
+// radio button
+// 적용 방법
+// <label class="radio" for="radio-1">
+//   <input type="radio" id="radio-1" name="" value="option1">
+//   <span></span>
+//   <span class="label">option1</span>
+// </label>
+.radio {
+  position: relative;
+}
+// checkbox 
+// 적용 방법
+// <label class="checkbox" for="checkbox-1">
+//   <input type="checkbox" id="checkbox-1" name="" value="option1">
+//   <span></span>
+//   <span class="label">option1</span>
+// </label>
+.checkbox {
+  position: relative;
+}
+// switch
+// 적용 방법
+// <label class="switch">
+//   <input type="checkbox"  onclick="toggle(this);" checked="checked">
+//   <span></span>
+//   <span class="label">On</span>
+// </label>
+.switch {
+  position: relative;
+}
+// underline
+.underline {
+  text-decoration: underline;
+}
+// description
+.description {
+  color: $warm-gray;
+}
+// 필수 (*) 표시
+.required {
+  padding-left: 0.3125rem; //5px
+  font-weight: 700;
+  &::after {
+    color: $red;
+    content: "\002a"; // *
+  } 
 }
