버그 수정 - form designer template/mixin.scss import - 신청서 화면 캘린더, 파일 업로드 아이콘 안나오는 버그 수정 - 신청서 처리 이력 테이블 정렬 깨지는 버그 수정

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -72,6 +72,23 @@ template {
   display: none;
 }
 
+/* _alignments.scss 
+ *
+ * 파일 경로 : template/_alignments.scss
+ * @description 정렬, 배치 관련 디자인
+ * @author jy.lim
+ * @vertionn 1.0
+ */
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 /* _elements.scss 
  *
  * 파일 경로 : template/_elements.scss
