--- a/src/main/resources/public/src/scss/form/_properties.scss
+++ b/src/main/resources/public/src/scss/form/_properties.scss
@@ -440,10 +440,10 @@
             width: 100%;
             .datepicker,
             .datetimepicker {
-                background: $input-bg-color url("#{$datepicker-asset-path}/icon_calendar.svg") no-repeat 98% 50%;
+                background: $input-bg-color url("#{$icon-folder-path}icon_calendar.svg") no-repeat 98% 50%;
             }
             .timepicker {
-                background: $input-bg-color url("#{$datepicker-asset-path}/icon_clock.svg") no-repeat 98% 50%;
+                background: $input-bg-color url("#{$icon-folder-path}icon_clock.svg") no-repeat 98% 50%;
             }
         }
 
