--- a/src/main/resources/public/src/scss/document/document.scss
+++ b/src/main/resources/public/src/scss/document/document.scss
@@ -4,11 +4,14 @@
  * Copyright 2020 Brainzcompany Co., Ltd.
  * https://www.brainz.co.kr
  */
- @charset 'utf-8';
+@charset 'utf-8';
 
- @import '../template/_reset.scss';
- @import '_variables.scss';
- @import '_elements.scss';
+@import '../template/_reset.scss'; // 상속 불가
+@import '../template/_functions.scss'; // 상속 불가
+@import '../template/_mixins.scss'; // 상속 불가
+@import '../template/_alignments.scss'; // 상속 불가
+@import '_variables.scss';
+@import '_elements.scss';
 
 .drawing-board {
     display: flex; 
