--- a/src/main/resources/public/src/scss/theme/default/_container.scss
+++ b/src/main/resources/public/src/scss/theme/default/_container.scss
@@ -240,6 +240,7 @@ span.vertical-bar {
                                 display: block;
                                 tr {
                                     display: flex;
+                                    align-items: center;
                                 }
                             }
                             th { color: $light-black; font-weight: 500; }
